--- a/src/posts/banana/2.md
+++ b/src/posts/banana/2.md
@@ -1,14 +1,14 @@
 ---
 icon: pen-to-square
 date: 2022-01-06
-category:
-  - 香蕉
-  - 水果
-tag:
-  - 黄
-  - 弯曲的
-  - 长
-star: 10
+# category:
+#   - 香蕉
+#   - 水果
+# tag:
+#   - 黄
+#   - 弯曲的
+#   - 长
+# star: 10
 ---
 
 # 香蕉 2
