--- a/src/posts/apple/1.md
+++ b/src/posts/apple/1.md
@@ -1,12 +1,12 @@
 ---
 icon: pen-to-square
 date: 2022-01-01
-category:
-  - 苹果
-tag:
-  - 红
-  - 大
-  - 圆
+# category:
+#   - 苹果
+# tag:
+#   - 红
+#   - 大
+#   - 圆
 ---
 
 # 苹果 1
