--- a/src/posts/apple/2.md
+++ b/src/posts/apple/2.md
@@ -1,13 +1,13 @@
 ---
 icon: pen-to-square
 date: 2022-01-02
-category:
-  - 苹果
-tag:
-  - 红
-  - 大
-  - 圆
-star: true
+# category:
+#   - 苹果
+# tag:
+#   - 红
+#   - 大
+#   - 圆
+# star: true
 ---
 
 # 苹果 2
