--- a/src/posts/apple/3.md
+++ b/src/posts/apple/3.md
@@ -1,13 +1,13 @@
 ---
 icon: pen-to-square
 date: 2022-01-03
-category:
-  - 苹果
-  - 水果
-tag:
-  - 红
-  - 大
-  - 圆
+# category:
+#   - 苹果
+#   - 水果
+# tag:
+#   - 红
+#   - 大
+#   - 圆
 ---
 
 # 苹果 3
