--- a/src/posts/banana/1.md
+++ b/src/posts/banana/1.md
@@ -1,13 +1,13 @@
 ---
 icon: pen-to-square
 date: 2022-01-05
-category:
-  - 香蕉
-  - 水果
-tag:
-  - 黄
-  - 弯曲的
-  - 长
+# category:
+#   - 香蕉
+#   - 水果
+# tag:
+#   - 黄
+#   - 弯曲的
+#   - 长
 ---
 
 # 香蕉 1
