--- a/src/posts/banana/4.md
+++ b/src/posts/banana/4.md
@@ -1,12 +1,12 @@
 ---
 icon: pen-to-square
 date: 2022-01-08
-category:
-  - 香蕉
-tag:
-  - 黄
-  - 弯曲的
-  - 长
+# category:
+#   - 香蕉
+# tag:
+#   - 黄
+#   - 弯曲的
+#   - 长
 ---
 
 # 香蕉 4
